--- a/app/src/main/res/drawable/logo.xml
+++ b/app/src/main/res/drawable/logo.xml
@@ -6,6 +6,6 @@
     android:viewportHeight="527.66">
     
     <path
-        android:fillColor="#FFFFFF"
+        android:fillColor="#555555"
         android:pathData="M324.49,176.78c-77.13-9-134.92-80.78-152.92-150.57v-0.14s-0.01,0.05-0.02,0.07c0-0.02-0.01-0.05-0.02-0.07v0.14c-17.99,69.78-75.78,141.57-152.92,150.57,152.51,33.04,135.26,197.33,152.92,350.54,0,0.22,0,0.34,0,0.34,0-0.06,0.01-0.11,0.02-0.17,0,0.06,0.01,0.11,0.02,0.17,0,0,0-0.12,0-0.34,17.65-153.21,0.41-317.5,152.92-350.54Z"/>
 </vector>
