--- a/app/src/main/res/drawable/glass_card_background.xml
+++ b/app/src/main/res/drawable/glass_card_background.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- Base glass tint -->
-    <item>
+    <!-- Subtle drop shadow -->
+    <item android:top="2dp">
         <shape android:shape="rectangle">
             <corners android:radius="22dp"/>
-            <solid android:color="#CFFFFFFF"/> <!-- ~8% white -->
-            <stroke android:width="1dp" android:color="#FFFFFFFF"/> <!-- faint white border -->
+            <solid android:color="#15000000"/> <!-- Very soft shadow with ~8% opacity -->
         </shape>
     </item>
 
-    <!-- Inner top highlight (1px) -->
+    <!-- Base card with light pinkish-purple-blue hue -->
+    <item android:bottom="2dp">
+        <shape android:shape="rectangle">
+            <corners android:radius="22dp"/>
+            <solid android:color="#F2F5FDFF"/> <!-- Light periwinkle/lavender white with 95% opacity -->
+            <stroke android:width="1dp" android:color="#20000000"/> <!-- very subtle border -->
+        </shape>
+    </item>
+
+    <!-- Inner top highlight (very subtle) -->
     <item android:top="1dp" android:bottom="999dp">
         <shape android:shape="rectangle">
             <corners android:topLeftRadius="22dp" android:topRightRadius="22dp"/>
-            <solid android:color="#1FFFFFFF"/> <!-- ~12% white line -->
+            <solid android:color="#08FFFFFF"/> <!-- extremely subtle white highlight -->
         </shape>
     </item>
 
-    <!-- Optional: subtle inner shadow at bottom -->
-    <item android:top="999dp">
-        <shape android:shape="rectangle">
-            <corners android:bottomLeftRadius="22dp" android:bottomRightRadius="22dp"/>
-            <solid android:color="#0D000000"/> <!-- ~5% black line -->
-        </shape>
-    </item>
 </layer-list>
