--- a/app/src/main/res/drawable/glass_keypad_button_selector.xml
+++ b/app/src/main/res/drawable/glass_keypad_button_selector.xml
@@ -46,39 +46,47 @@
         </layer-list>
     </item>
     
-    <!-- Normal state - default design -->
+    <!-- Normal state - darker design for better visibility -->
     <item>
         <layer-list>
-            <!-- Base glass (lighter vertical fade + brighter rim) -->
-            <item>
+            <!-- Shadow layer -->
+            <item android:left="0dp" android:top="2dp" android:right="2dp" android:bottom="0dp">
+                <shape android:shape="rectangle">
+                    <corners android:radius="16dp"/>
+                    <solid android:color="#15000000"/>
+                </shape>
+            </item>
+            
+            <!-- Base glass (darker with more opacity) -->
+            <item android:left="0dp" android:top="0dp" android:right="2dp" android:bottom="2dp">
                 <shape android:shape="rectangle">
                     <corners android:radius="16dp"/>
                     <gradient
                         android:type="linear"
                         android:angle="90"
-                        android:startColor="#40FFFFFF"
-                        android:endColor="#21FFFFFF"/>
-                    <stroke android:width="1dp" android:color="#80FFFFFF"/>
+                        android:startColor="#80FFFFFF"
+                        android:endColor="#65FFFFFF"/>
+                    <stroke android:width="1.5dp" android:color="#B3FFFFFF"/>
                 </shape>
             </item>
 
-            <!-- 1dp top highlight -->
-            <item android:height="1dp" android:gravity="top">
+            <!-- Top highlight -->
+            <item android:left="0dp" android:top="1dp" android:right="2dp" android:bottom="999dp">
                 <shape android:shape="rectangle">
                     <corners android:topLeftRadius="16dp" android:topRightRadius="16dp"/>
-                    <solid android:color="#1EFFFFFF"/>
+                    <solid android:color="#40FFFFFF"/>
                 </shape>
             </item>
 
             <!-- Gentle inner shade near bottom -->
-            <item>
+            <item android:left="0dp" android:top="0dp" android:right="2dp" android:bottom="2dp">
                 <shape android:shape="rectangle">
                     <corners android:radius="16dp"/>
                     <gradient
                         android:type="linear"
                         android:angle="270"
                         android:startColor="#00000000"
-                        android:endColor="#0D000000"/>
+                        android:endColor="#15000000"/>
                 </shape>
             </item>
         </layer-list>
