--- a/app/src/main/res/drawable/modal_button_background.xml
+++ b/app/src/main/res/drawable/modal_button_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#40FFFFFF">
+    android:color="#40AFA0EE">
     <item>
         <layer-list>
             <!-- Shadow -->
@@ -11,7 +11,7 @@
                 </shape>
             </item>
             
-            <!-- Main button -->
+            <!-- Main button with lavender purple gradient -->
             <item
                 android:bottom="3dp"
                 android:left="0dp"
@@ -20,8 +20,8 @@
                 <shape android:shape="rectangle">
                     <gradient
                         android:angle="90"
-                        android:startColor="#ECEFF1"
-                        android:endColor="#CFD8DC"
+                        android:startColor="#C4B5F2"
+                        android:endColor="#AFA0EE"
                         android:type="linear"/>
                     <corners android:radius="28dp"/>
                 </shape>
@@ -36,7 +36,7 @@
                 <shape android:shape="rectangle">
                     <gradient
                         android:angle="90"
-                        android:startColor="#20FFFFFF"
+                        android:startColor="#30FFFFFF"
                         android:centerColor="#00FFFFFF"
                         android:endColor="#00FFFFFF"
                         android:type="linear"/>
