--- a/app/src/main/res/drawable/sphere_background.xml
+++ b/app/src/main/res/drawable/sphere_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- 1) Ambient outer glow (soft white halo) -->
+    <!-- 1) Ambient outer glow (soft lavender glow) -->
     <item
         android:left="-14dp"
         android:top="-14dp"
@@ -11,22 +11,22 @@
             <gradient
                 android:type="radial"
                 android:gradientRadius="96dp"
-                android:startColor="#26FFFFFF"
-                android:endColor="#00FFFFFF" />
+                android:startColor="#30AFA0EE"
+                android:endColor="#00000000" />
         </shape>
     </item>
 
-    <!-- 2) Base glass sphere (radial frost; no centerColor) -->
+    <!-- 2) Base light lavender sphere with subtle gradient (r175 g170 b238) -->
     <item>
         <shape android:shape="oval">
             <gradient
                 android:type="radial"
                 android:gradientRadius="56dp"
-                android:startColor="#66FFFFFF"
-                android:endColor="#0DFFFFFF" />   <!-- faint edge -->
+                android:startColor="#DDD8F5"
+                android:endColor="#AFA0EE" />
             <stroke
                 android:width="1dp"
-                android:color="#40FFFFFF" />
+                android:color="#90FFFFFF" />
         </shape>
     </item>
 
@@ -40,7 +40,7 @@
             <gradient
                 android:type="radial"
                 android:gradientRadius="24dp"
-                android:startColor="#BFFFFFFF"
+                android:startColor="#A0FFFFFF"
                 android:endColor="#00FFFFFF" />
         </shape>
     </item>
@@ -56,7 +56,7 @@
                 android:type="linear"
                 android:angle="315"
                 android:startColor="#00000000"
-                android:endColor="#14000000" />
+                android:endColor="#30000000" />
         </shape>
     </item>
 
@@ -65,7 +65,7 @@
         android:top="2dp"
         android:bottom="999dp">
         <shape android:shape="oval">
-            <stroke android:width="1dp" android:color="#1FFFFFFF" />
+            <stroke android:width="1dp" android:color="#30FFFFFF" />
         </shape>
     </item>
 
