--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -46,16 +46,16 @@
         <item name="android:layout_width">@dimen/keypad_button_size</item>
         <item name="android:layout_height">@dimen/keypad_button_size</item>
         <item name="android:background">@drawable/glass_keypad_button_selector</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">#555555</item>
         <item name="android:textSize">@dimen/text_size_keypad</item>
-        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:elevation">0dp</item>
     </style>
     
     <!-- Glass Action Button Style -->
     <style name="GlassActionButtonStyle" parent="Widget.AppCompat.Button">
         <item name="android:background">@drawable/glass_action_button_selector</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">#555555</item>
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:elevation">0dp</item>
     </style>
